detekt-rules/naming/src/test/resources/InvalidPackageDeclarationSpec/src/foo/bar/File.kt
package com.example.foo.bar

class C
